--- a/src/components/imageList/index.module.scss
+++ b/src/components/imageList/index.module.scss
@@ -1,8 +1,8 @@
 .page{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-start;
+    // justify-content: center;
     width: 100%;
     height: 100vh;
     min-height: 100vh;
@@ -11,6 +11,17 @@
     img{
         width: 400px;
         height: 300px;
+        margin: 20px auto;
+        
+    }
+    .loading{
+        width: 400px;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px #fff solid;
+        color: #fff;
         margin: 20px auto;
     }
 }
