--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,8 +1,8 @@
 .app {
     width: 100vw;
+    height: 100vh;
     display: flex;
     position: relative;
-
     .route {
         cursor: pointer;
     }
