--- a/src/pages/login/index.module.scss
+++ b/src/pages/login/index.module.scss
@@ -1,4 +1,15 @@
 .container {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .content {
+        width: 500px;
+        background-color: antiquewhite;
+        padding: 30px;
+        border-radius: 4px;
+        box-shadow: 5px 5px 3px #e3e3e3;
+    }
 }
