--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,9 +1,9 @@
-.app {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    position: relative;
-    .route {
-        cursor: pointer;
-    }
+.content {
+  width: 100vw;
+  height: calc(100vh - 70px);
+  display: flex;
+  position: relative;
+  .route {
+    cursor: pointer;
+  }
 }
