--- a/src/pages/home/header/index.module.scss
+++ b/src/pages/home/header/index.module.scss
@@ -2,6 +2,9 @@
   height: 69px;
   width: 100%;
   border-bottom: 1px solid #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   .item{
     height: 50px;
     width: 100px;
